--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,5 +5,5 @@
     </head>
     <canvas id = "myCanvas" width="1650" height="1080"></canvas>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src = "./main.js"></script>
+    <script type = "module" src = "./main.js"></script>
 </html>
