--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,10 @@
     <head>
         <link rel="stylesheet" href="styles.css">
     </head>
-    <canvas id = "myCanvas" width="1650" height="1080"></canvas>
+    <canvas id = "myCanvas"></canvas>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type = "module" src = "./main.js"></script>
+    <div class = "title">Hex</div>
+    <div class = "turnTitle">Your turn</div>
+    <a class = "button" href = "/rules.html">Read the rules</button>
 </html>
