finished minimax, onto mcts tomorrow

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <canvas id = "myCanvas"></canvas>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type = "module" src = "./main.js"></script>
-    <div class = "title">Hex</div>
+    <div class = "title" href = "/">Hex</div>
     <div class = "turnTitle">Your turn</div>
     <a class = "button" href = "/rules.html">Read the rules</button>
 </html>
