--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="/static/styles.css">
     </head>
     <canvas id = "myCanvas"></canvas>
+    <script>
+        var roomID = "{{ room_id }}";
+    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type = "module" src = "./main.js"></script>
+    <script type = "module" src = "/static/main.js" defer></script>
     <div class = "title" href = "/">Hex</div>
-    <div class = "turnTitle">Your turn</div>
+    <div class = "turnTitle"></div>
     <a class = "button" href = "/rules.html">Read the rules</button>
 </html>
